# Kiwi

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  ChangeLog.txt  Doxyfile  README.md  appveyor.yml  test_Scheduler.cpp  travisci_rsa.enc  travisci_rsa.pub
.travis/: after_success.sh  after_sucess.sh  before_install.sh  script.sh  test.sh  travis_after_sucess.sh  travis_script.sh
CMake/: ConfigBoost.cmake  ConfigFAUST.cmake  ConfigFlip.cmake  ConfigJUCE.cmake  ConfigLLVM.cmake  ConfigOpenSSL.cmake  unpack.cmake
Client/: Kiwi.jucer
Client/JuceLibraryCode/: AppConfig.h  BinaryData.cpp  BinaryData.h  JuceHeader.h
Client/Source/: Application.cpp  Application.hpp  BeaconDispatcher.cpp  BeaconDispatcher.hpp  CommandIDs.hpp  DocumentExplorer.cpp  DocumentExplorer.hpp  KiwiApp.cpp  KiwiApp.h  KiwiApp.hpp  KiwiApp_AboutWindow.cpp  KiwiApp_AboutWindow.hpp  KiwiApp_BeaconDispatcher.cpp  KiwiApp_BeaconDispatcher.hpp  KiwiApp_BinaryData.hpp  KiwiApp_CarrierSocket.cpp  KiwiApp_CarrierSocket.hpp  KiwiApp_CommandIDs.hpp  KiwiApp_Console.cpp  KiwiApp_Console.hpp  KiwiApp_ConsoleHistory.cpp  KiwiApp_ConsoleHistory.hpp  KiwiApp_DocumentBrowserView.cpp  KiwiApp_DocumentBrowserView.hpp  KiwiApp_DocumentExplorer.cpp  KiwiApp_DocumentExplorer.hpp  KiwiApp_DocumentManager.cpp  KiwiApp_DocumentManager.hpp  KiwiApp_DspDeviceManager.cpp  KiwiApp_DspDeviceManager.hpp  KiwiApp_IDs.hpp  KiwiApp_Instance.cpp  KiwiApp_Instance.hpp  KiwiApp_LinkView.cpp  KiwiApp_LinkView.hpp  KiwiApp_LookAndFeel.cpp  KiwiApp_LookAndFeel.hpp  KiwiApp_ObjectView.cpp  KiwiApp_ObjectView.hpp  KiwiApp_PatcherManager.cpp  (+48 more)
Config/: Doxyfile  Info.plist  build.py  configure.py  flip-public.py  flipcheckout.py  prepare-release.sh  publish-doxygen.sh  ressource.py  run_test.py  travisci_rsa.enc  travisci_rsa.pub
Doc/html/: _kiwi_app___console_8hpp_source.html  _kiwi_app___i_ds_8hpp_source.html  _kiwi_app___look_and_feel_8hpp_source.html  _kiwi_app___object_view_8hpp_source.html  _kiwi_dsp___chain_8hpp_source.html  _kiwi_engine___audio_controler_8hpp_source.html  _kiwi_engine___beacon_8hpp_source.html  _kiwi_engine___circular_buffer_8hpp_source.html  _kiwi_engine___def_8hpp_source.html  _kiwi_engine___instance_8hpp_source.html  _kiwi_engine___patcher_8hpp_source.html  _kiwi_model___link_8hpp_source.html  _kiwi_model___patcher_validator_8hpp_source.html  _kiwi_model___patcher_view_8hpp_source.html  classkiwi_1_1_about_window.html  classkiwi_1_1_about_window_1_1_content-members.html  classkiwi_1_1_beacon_dispatcher_elem.html  classkiwi_1_1_carrier_socket.html  classkiwi_1_1_classic_box-members.html  classkiwi_1_1_console_history-members.html  classkiwi_1_1_console_history.html  classkiwi_1_1_console_toolbar_factory-members.html  classkiwi_1_1_custom_toolbar_button.html  classkiwi_1_1_document_browser_view_1_1_drive_view_1_1_header-members.html  classkiwi_1_1_document_browser_view_1_1_drive_view_1_1_header.html  classkiwi_1_1_document_browser_view_1_1_drive_view_1_1_row_elem.html  classkiwi_1_1_document_manager.html  (+88 more)
Kiwi.xcodeproj/: project.pbxproj
Modules/KiwiDsp/: CMakeLists.txt  KiwiChain.hpp  KiwiDsp.hpp  KiwiDspChain.cpp  KiwiDspChain.hpp  KiwiDspInfos.cpp  KiwiDspInfos.hpp  KiwiDspLink.cpp  KiwiDspLink.hpp  KiwiDspMisc.hpp  KiwiDspNode.cpp  KiwiDspNode.hpp  KiwiDspProcessor.cpp  KiwiDspProcessor.hpp  KiwiDspSamples.hpp  KiwiDspSignal.cpp  KiwiDspSignal.hpp  KiwiDsp_Buffer.cpp  KiwiDsp_Buffer.hpp  KiwiDsp_Chain.cpp  KiwiDsp_Chain.h  KiwiDsp_Chain.hpp  KiwiDsp_Def.h  KiwiDsp_Def.hpp  KiwiDsp_Infos.cpp  KiwiDsp_Infos.hpp  KiwiDsp_Link.hpp  KiwiDsp_Misc.h  KiwiDsp_Misc.hpp  KiwiDsp_Node.cpp  KiwiDsp_Node.hpp  KiwiDsp_Processor.cpp  KiwiDsp_Processor.h  KiwiDsp_Processor.hpp  KiwiDsp_Samples.hpp  KiwiDsp_Signal.cpp  KiwiDsp_Signal.h  KiwiDsp_Signal.hpp  KiwiDsp_def.hpp  KiwiDsp_platform.hpp  (+6 more)
Modules/KiwiDsp/KiwiDsp.xcodeproj/: project.pbxproj
Modules/KiwiDsp/Source/: KiwiDspMisc.hpp  KiwiDspProcessor.cpp
Modules/KiwiDsp/src/: KiwiDspLink.hpp
Resources/: SourceHeader.txt
Ressources/: Info.plist  Kiwi.rc  SourceHeader.txt
Scripts/: FaustLib.cmake  boost.py  configure.py  dependency.cmake  flip.py  gendoc.py  group.cmake  juce_module.cmake  resources.py  ressource.py  setup-Win32.iss  setup-x64.iss
config/: prepare-release.sh  publish-doxygen.sh
docs/: Doxyfile  _Sidebar.md  examples-en.md  exemples-fr.md  getting-started-en.md  getting-started-fr.md  index.html  objects-en.md  objects-fr.md  tutorials-en.md  tutorials-fr.md
test/: CMakeLists.txt  KiwiBenchmark.hpp
test/Dsp/KiwiDspTest/KiwiDspTest/: main.cpp
test/Dsp/KiwiDspTest/KiwiDspTest.xcodeproj/: project.pbxproj
test/Modules/Core/: test_KiwiAtom.cpp  test_KiwiCore.cpp  test_KiwiSymbol.cpp
test/Modules/Core/test_KiwiCore.xcodeproj/: project.pbxproj
test/Modules/Core/test_KiwiCore.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
test/Modules/Dsp/: test_KiwiDsp.cpp  test_class.cpp  test_class.hpp
test/Modules/Dsp/KiwiTestDsp.xcodeproj/: project.pbxproj
test/Modules/Dsp/KiwiTestDsp.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
test/Modules/Graphics/: test_KiwiGraphics.cpp
test/Modules/Graphics/test_KiwiGraphics.xcodeproj/: project.pbxproj
test/Modules/Gui/: test_KiwiGui.cpp
test/Modules/Gui/test_KiwiGui.xcodeproj/: project.pbxproj
test/Modules/KiwiCore/: test_KiwiCore.cpp
test/Modules/KiwiDsp/: test_KiwiDsp.cpp
test/Modules/Model/: test_KiwiModel.cpp  test_KiwiPatcher.cpp
test/Modules/Model/test_KiwiModel.xcodeproj/: project.pbxproj
test/Modules/Model/test_KiwiModel.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
test/playground/KiwiClient/: KiwiClient.cpp  KiwiClient.hpp  main.cpp
test/playground/KiwiClient/KiwiClient.xcodeproj/: project.pbxproj
test/playground/KiwiClient/KiwiClient.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
test/playground/KiwiCore/: KiwiConsole.hpp
test/playground/KiwiModel/: KiwiModel.cpp  KiwiModel.hpp
test/playground/KiwiServer/: KiwiServer.cpp  KiwiServer.hpp  main.cpp
test/playground/KiwiServer/KiwiServer.xcodeproj/: project.pbxproj
(+2213 files in other folders)
